enabled service visibility

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
               <div id="services" class="d-flex flex-wrap justify-content-between">
                 <!-- Add data attribute for duration -->
                 <div class="form-check form-check-inline">
-                  <input type="checkbox" id="headShave" name="service" value="Head Shave" data-duration="40" class="form-check-input visually-hidden">
+                  <input type="checkbox" id="headShave" name="service" value="Head Shave" data-duration="40" class="form-check-input">
                   <!-- Use Font Awesome icons for labels -->
                   <label for="headShave" class="form-check-label">
                     <i class="fas fa-cut fa-2x"></i>
@@ -141,7 +141,7 @@
                 </div>
                 <!-- Add data attribute for duration -->
                 <div class="form-check form-check-inline">
-                  <input type="checkbox" id="scrubbing" name="service" value="Scrubbing" data-duration="30" class="form-check-input visually-hidden">
+                  <input type="checkbox" id="scrubbing" name="service" value="Scrubbing" data-duration="30" class="form-check-input">
                   <!-- Use Font Awesome icons for labels -->
                   <label for="scrubbing" class="form-check-label">
                     <i class="fas fa-spa fa-2x"></i>
@@ -150,7 +150,7 @@
                 </div>
                 <!-- Add data attribute for duration -->
                 <div class="form-check form-check-inline">
-                  <input type="checkbox" id="massage" name="service" value="Massage" data-duration="90" class="form-check-input visually-hidden">
+                  <input type="checkbox" id="massage" name="service" value="Massage" data-duration="90" class="form-check-input">
                   <!-- Use Font Awesome icons for labels -->
                   <label for="massage" class="form-check-label">
                     <i class="fas fa-hands fa-2x"></i>
@@ -159,7 +159,7 @@
                 </div>
                 <!-- Add data attribute for duration -->
                 <div class="form-check form-check-inline">
-                  <input type="checkbox" id="beards" name="service" value="Beards" data-duration="30" class="form-check-input visually-hidden">
+                  <input type="checkbox" id="beards" name="service" value="Beards" data-duration="30" class="form-check-input">
                   <!-- Use Font Awesome icons for labels -->
                   <label for="beards" class="form-check-label">
                     <i class="fas fa-beard fa-2x"></i>
@@ -168,7 +168,7 @@
                 </div>
                 <!-- Add data attribute for duration -->
                 <div class="form-check form-check-inline">
-                  <input type="checkbox" id="dye" name="service" value="Hair Dye" data-duration="40" class="form-check-input visually-hidden">
+                  <input type="checkbox" id="dye" name="service" value="Hair Dye" data-duration="40" class="form-check-input">
                   <!-- Use Font Awesome icons for labels -->
                   <label for="dye" class="form-check-label">
                     <i class="fas fa-paint-brush fa-2x"></i>
@@ -177,6 +177,7 @@
                 </div>
               </div>
             </div>
+
             <button type="submit" class="btn btn-primary">Book Appointment</button>
           </form>
         </div>
